--- a/sourse/sass/style.scss
+++ b/sourse/sass/style.scss
@@ -1,5 +1,6 @@
 @import "normalize.scss";
 @import "variables.scss";
+@import "mixins.scss";
 
 @import "global/fonts.scss";
 @import "global/basis.scss";
@@ -10,3 +11,4 @@
 @import "bloсks/intro.scss";
 @import "bloсks/catalog.scss";
 @import "bloсks/in-use.scss";
+@import "bloсks/example.scss";
