--- a/sourse/sass/mixins.scss
+++ b/sourse/sass/mixins.scss
@@ -1,7 +1,18 @@
-body {
-  background-color: red;
+@mixin title {
+  font-size: 36px;
+  line-height: 1.6;
+  font-weight: 400;
+  text-align: left;
+  margin-bottom: 40px;
+  color: $color-black;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.testing {
-  width: percentage(5/7);
+@mixin text {
+  text-align: left;
+  font-size: 14px;
+  line-height: 1.3;
+  font-family: "Arial", sans-serif;
+  color: $color-gray-dark;
 }
