--- a/sourse/sass/variables.scss
+++ b/sourse/sass/variables.scss
@@ -4,8 +4,9 @@ $color-white-lighten: rgba(255, 255, 255, 0.3);
 $color-green: #68b738;
 $color-green-dark: #5eaa2f;
 $color-gray: #f2f2f2;
-$color-grey-dark: #444444;
-$color-grey-light: rgba(0, 0, 0, 0.1);
+$color-gray-dark: #444444;
+$color-gray-light: rgba(0, 0, 0, 0.1);
+$color-gray-middle: #cdcdcd;
 $color-black: #111111;
 $color-black-dark: #222222;
 $color-border: #e6e6e6;
