--- a/sourse/sass/style.scss
+++ b/sourse/sass/style.scss
@@ -12,3 +12,6 @@
 @import "bloсks/catalog.scss";
 @import "bloсks/in-use.scss";
 @import "bloсks/example.scss";
+@import "bloсks/contacts.scss";
+@import "bloсks/page-footer.scss";
+@import "bloсks/social.scss";
