--- a/sourse/sass/bloсks/main-nav.scss
+++ b/sourse/sass/bloсks/main-nav.scss
@@ -31,12 +31,12 @@
 
 .main-nav__link {
   color: $color-black;
+  text-align: center;
   text-transform: uppercase;
   font-size: 20px;
   line-height: 1;
   display: block;
   padding-top: 25px;
   padding-bottom: 25px;
-  // border-bottom: 1px solid $color-border;
   font-weight: 500;
 }
