--- a/sourse/sass/bloсks/container-row.scss
+++ b/sourse/sass/bloсks/container-row.scss
@@ -1,4 +1,10 @@
 .container-row {
-  padding-left: 20px;
-  padding-right: 20px;
+  width: 280px;
+  margin: 0 auto;
+}
+
+@media (min-width: $tablet-width) {
+  .container-row {
+    width: 708px;
+  }
 }
