--- a/sourse/sass/bloсks/social.scss
+++ b/sourse/sass/bloсks/social.scss
@@ -2,15 +2,17 @@
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+
   border-bottom: 1px solid $color-gray-light;
 }
 
 .social__item {
   position: relative;
+
   width: 30px;
   height: 30px;
-  margin-bottom: 23px;
   margin-right: 30px;
+  margin-bottom: 23px;
 }
 
 .social__item:last-child {
@@ -20,9 +22,11 @@
 .social__link {
   content: "";
   position: absolute;
+
   display: block;
   width: 30px;
   height: 30px;
+
   background-repeat: no-repeat;
   background-position: center;
 
@@ -36,5 +40,12 @@
 
   &--fb {
     background-image: url("../img/icon-fb.svg");
+  }
+}
+
+@media(min-width: $tablet-width) {
+  .social__list {
+    border-bottom: none;
+    margin-bottom: 0;
   }
 }
