--- a/sourse/sass/global/basis.scss
+++ b/sourse/sass/global/basis.scss
@@ -31,7 +31,7 @@ a {
   padding: 11px 11px;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
-  line-height: 18px;
+  line-height: 1.3;
   text-align: center;
   text-transform: uppercase;
   color: $color-white;
@@ -88,10 +88,4 @@ img {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
-
-.container-row {
-  margin: 0 auto;
-  text-align: center;
-  width: 280px;
 }
