--- a/sourse/sass/variables.scss
+++ b/sourse/sass/variables.scss
@@ -7,6 +7,7 @@ $color-gray: #f2f2f2;
 $color-gray-dark: #444444;
 $color-gray-light: rgba(0, 0, 0, 0.1);
 $color-gray-middle: #cdcdcd;
+$color-gray-bg: #eaeaea;
 $color-black: #111111;
 $color-black-dark: #222222;
 $color-border: #e6e6e6;
