--- a/sourse/sass/bloсks/nutrition.scss
+++ b/sourse/sass/bloсks/nutrition.scss
@@ -66,3 +66,12 @@
     height: 609px;
   }
 }
+
+@media(min-width: $desctop-width) {
+  .nutrition__img {
+    width: 552px;
+    height: 499px;
+    top: 0;
+    right: 20%;
+  }
+}
