--- a/sourse/sass/bloсks/page-header.scss
+++ b/sourse/sass/bloсks/page-header.scss
@@ -41,32 +41,27 @@
   }
 
   .page-header__row::before,
-  .page-header__row::after,
-  .main-nav__item::before,
-  .main-nav__item::after {
+  .page-header__row::after {
     display: none;
   }
+}
 
-  .main-nav {
-    display: block;
-    width: 438px;
-  }
+@media(min-width: $desctop-width) {
+  .page-header {
+    position: relative;
 
-  .main-nav__list {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 12px;
-  }
-
-  .main-nav__link {
-    color: $color-black-dark;
-    font-size: 18px;
-    line-height: 1.3;
-    font-weight: 400;
-    padding-bottom: 10px;
-
-    &--active {
-      border-bottom: 2px solid $color-green;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 50%;
+      height: 696px;
+      width: 50%;
+      z-index: -1;
+      background-color: $color-green-bg;
+      background-image: url("../img/index-background-desktop@1x.jpg");
+      background-repeat: no-repeat;
+      background-position: right;
     }
   }
 }
