--- a/sourse/sass/variables.scss
+++ b/sourse/sass/variables.scss
@@ -3,6 +3,7 @@ $color-white-light: rgba(255, 255, 255, 0.6);
 $color-white-lighten: rgba(255, 255, 255, 0.3);
 $color-green: #68b738;
 $color-green-dark: #5eaa2f;
+$color-green-bg: #65a93c;
 $color-gray: #f2f2f2;
 $color-gray-dark: #444444;
 $color-gray-light: rgba(0, 0, 0, 0.1);
@@ -12,3 +13,4 @@ $color-black: #111111;
 $color-black-dark: #222222;
 $color-border: #e6e6e6;
 $tablet-width: 768px;
+$desctop-width: 1300px;
