--- a/sourse/sass/bloсks/contacts.scss
+++ b/sourse/sass/bloсks/contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-  padding-top: 10px;
+  padding-top: 15px;
 }
 
 .contacts-row {
@@ -8,29 +8,53 @@
 
 .contacts__promo {
   text-align: left;
+  width: 125px;
 }
 
 .contacts__promo  b {
   font-size: 16px;
-  line-height: 1.2;
+  line-height: 1.3;
   text-transform: uppercase;
   font-weight: 400;
 }
 
 .contacts__address {
   @include text;
+  width: 139px;
+  margin-left: auto;
+  line-height: 1.43;
 }
 
 .contacts__map {
   height: 360px;
 }
 
+.contacts-wrap {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
 @media(min-width: $tablet-width) {
-  .contacts__promo b {
-    font-size: 20px;
-    line-height: 1.25;
-    width: 155px;
-    display: block;
+  .contacts{
+    padding-top: 45px;
+  }
+
+  .contacts-wrap {
+    margin-bottom: 44px;
+  }
+
+  .contacts__promo {
+    padding-top: 7px;
+    margin-left: 41px;
+
+     & b {
+      font-size: 20px;
+      line-height: 1.25;
+      width: 155px;
+      display: block;
+    }
   }
 
   .contacts__address {
@@ -39,11 +63,17 @@
     text-align: right;
     width: 160px;
     margin-left: auto;
+    margin-right: 41px;
+
+
+    &--city {
+      display: block;
+      margin-top: 20px;
+    }
   }
 
-  .contacts__address--city {
-    display: block;
-    margin-top: 20px;
+  .contacts__map {
+    height: 404px;
   }
 }
 
@@ -59,8 +89,8 @@
     display: flex;
     width: 570px;
     background-color: $color-white;
-    padding: 60px;
-    margin-top: 50px;
+    padding: 45px;
+    margin-top: 90px;
     z-index: 1
   }
 
@@ -70,6 +100,10 @@
 
   .contacts__map {
     height: 404px;
+  }
+
+  .contacts__promo {
+    margin-left: 32px;
   }
 
   #map {
