--- a/sourse/sass/bloсks/example.scss
+++ b/sourse/sass/bloсks/example.scss
@@ -1,27 +1,30 @@
 .example {
   background-color: $color-gray;
-  padding-top: 20px;
+  padding-top: 18px;
   padding-bottom: 20px;
 }
 
 .example__title {
   @include title;
+  margin-bottom: 25px;
 }
 
 .example__text {
   @include text;
-  margin-bottom: 30px;
+  margin-bottom: 24px;
+  width: 266px;
 }
 
 .example__list {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 19px;
 }
 
 .example__item {
   position: relative;
   border: 1px solid $color-gray-middle;
-  border-radius: 10px;
+  border-radius: 6px;
   text-align: center;
   padding: 0 10px;
   width: 125px;
@@ -32,6 +35,8 @@
     line-height: 1;
     color: $color-black;
     text-transform: uppercase;
+    margin-top: 13px;
+    margin-bottom: 18px;
   }
 
   &--param {
@@ -42,8 +47,9 @@
     transform: translate(-50%, 0);
     font-size: 12px;
     line-height: 1;
+    letter-spacing: 1.1px;
     text-align: center;
-    width: 60px;
+    width: 80px;
     background-color: $color-gray;
   }
 }
@@ -92,31 +98,99 @@
   }
 }
 
+.cd-image-label {
+  display: none;
+}
+
+.example__range::before,
+.example__range::after {
+  display: none;
+}
+
+.example__slider {
+  background: $color-gray;
+}
+
+.range {
+  width: 140px;
+  display: block;
+  height: 15px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 64px;
+
+  border: 1px solid $color-gray-middle;
+  border-radius: 10px;
+  background-color: $color-white;
+}
+
+.example__slider-range {
+  display: flex;
+  justify-content: space-between;
+}
+
+.range-text {
+  font-size: 16px;
+  line-height: 1.25;
+  color: $color-black;
+  text-transform: uppercase;
+  width: 48px;
+  margin-top: 57px;
+  padding-bottom: 5px;
+}
+
+.cd-image-container {
+  width: 100%;
+}
+
+.cd-handle {
+  top: 125.5%;
+  border: none;
+  border-radius: 10px;
+  height: 6px;
+  background-color: $color-green;
+  box-shadow: none;
+
+  &::before {
+    display: none;
+  }
+}
+
+.example__slider--tablet {
+  visibility: hidden;
+  display: none;
+}
+
 @media(min-width: $tablet-width) {
   .example {
     border-top: 1px solid $color-border;
-    background-color: transparent;
-    padding-top: 30px;
-    padding-bottom: 80px;
+    background: linear-gradient(to top, $color-gray-bg 42.7%, $color-white 42.7%);
+    padding-top: 43px;
+    padding-bottom: 0;
   }
 
   .example__title {
     font-size: 60px;
     line-height: 1;
+    margin-bottom: 48px;
   }
 
   .example-info {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 39px;
   }
 
   .example__text {
     font-size: 16px;
     line-height: 1.5;
+    width: auto;
+    max-width: 702px;
+    margin-bottom: 55px;
   }
 
   .example__item {
-    width: 160px;
+    width: 165px;
 
     &--value {
       font-size: 30px;
@@ -127,8 +201,13 @@
       font-size: 14px;
       line-height: 1;
       background-color: $color-white;
-      top: 70%;
+      top: 68%;
+      width:132px;
     }
+  }
+
+  .weight {
+    width: 110px;
   }
 
   .example__spend {
@@ -139,18 +218,20 @@
     margin-left: auto;
   }
 
+  .example__spend p {
+    margin-top: 6px;
+  }
+
   .example__list {
     width: 368px;
+    max-height: 85px;
   }
 
   .example__slider {
-    background: linear-gradient(to top, $color-gray-bg 70%, $color-white 30%);
+    background: linear-gradient(to top, $color-gray-bg 73%, $color-white 27%);
     min-height: 632px;
   }
 
-  .cd-image-label {
-    display: none;
-  }
   .range {
     width: 578px;
     display: block;
@@ -161,11 +242,6 @@
 
     border-radius: 10px;
     background-color: $color-gray-middle;
-  }
-
-  .example__range::before,
-  .example__range::after {
-    display: none;
   }
 
   .example__slider-range {
@@ -182,12 +258,49 @@
     width: 48px;
     padding-bottom: 5px;
   }
+
+  .example__slider--tablet {
+    visibility: visible;
+  }
+
+  .example__slider--mobile {
+    visibility: hidden;
+    display: none;
+  }
+
+  .cd-image-container {
+    margin-left: 10px;
+  }
+
+  .cd-handle {
+    height: 34px;
+    width: 34px;
+    left: 50%;
+    top: 100%;
+    margin-left: -18px;
+    margin-top: 15px;
+    border-radius: 50%;
+    border: 2px solid #cdcdcd;
+    background-color: #ffffff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+
+    &::before {
+      display: block;
+    }
+  }
 }
 
 @media(min-width: $desctop-width) {
   .example {
+    padding-top: 0;
     border-top: none;
-    background: linear-gradient(to top, $color-gray-bg 70.3%, $color-white 30%);
+    background: linear-gradient(to top, $color-gray-bg 77.5%, $color-white 22.5%);
+  }
+
+  .example__slider {
+    background: linear-gradient(to top, #eaeaea 77.5%, #ffffff 22.5%);
+    min-height: 600px;
+    margin-left: 120px;
   }
 
   .example .container-row {
@@ -196,27 +309,37 @@
   }
 
   .example__title {
-    margin-bottom: 200px;
+    margin-bottom: 128px;
   }
 
   .example__text {
-    margin-bottom: 40px;
+    margin-bottom: 70px;
   }
 
   .example-info {
     width: 435px;
   }
 
+  .example__list {
+    margin-bottom: 37px;
+  }
+
   .example__item--param {
     background-color: $color-gray-bg;
+    letter-spacing: 1.5px;
   }
 
   .example__spend {
     margin: 0;
     width: 355px;
+    text-align: left;
+
+    &--price {
+      margin-left: 60px;
+    }
   }
 
-  .example__spend--price {
-    margin-left: 80px;
+  .cd-image-container {
+    margin-top: -60px;
   }
 }
