--- a/sourse/sass/bloсks/page-footer.scss
+++ b/sourse/sass/bloсks/page-footer.scss
@@ -5,8 +5,8 @@
 }
 
 .footer__logo {
-  margin-bottom: 23px;
-  padding-top: 40px;
+  margin-bottom: 16px;
+  padding-top: 42px;
   padding-bottom: 30px;
 
   border-bottom: 1px solid $color-gray-light;
@@ -21,6 +21,7 @@
     font-size: 16px;
     line-height: 1;
     text-transform: uppercase;
+    font-family: "Arial", sans-serif;
 
     & span {
       text-transform: capitalize;
@@ -29,8 +30,13 @@
 }
 
 @media(min-width: $tablet-width) {
+  .page-footer {
+    padding-top: 17px;
+  }
+
   .footer__logo {
     border-bottom: none;
+    margin-bottom: 0;
   }
 
   .page-footer .container-row {
@@ -40,8 +46,12 @@
   }
 
   .footer__copyright--title {
-    margin-right: 15px;
+    margin-right: 21px;
     display: block;
   }
 
+  .foooter__social {
+    margin-left: 28px;
+    padding-top: 10px;
+  }
 }
