--- a/sourse/sass/bloсks/social.scss
+++ b/sourse/sass/bloсks/social.scss
@@ -1,7 +1,7 @@
 .social__list {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 
   border-bottom: 1px solid $color-gray-light;
 }
@@ -11,8 +11,8 @@
 
   width: 30px;
   height: 30px;
-  margin-right: 30px;
-  margin-bottom: 23px;
+  margin-right: 26px;
+  margin-bottom: 15px;
 }
 
 .social__item:last-child {
@@ -32,14 +32,18 @@
 
   &--vk {
     background-image: url("../img/icon-vk.svg");
+    background-size: 23px;
   }
 
   &--inst {
     background-image: url("../img/icon-insta.svg");
+    background-size: 17px;
   }
 
   &--fb {
     background-image: url("../img/icon-fb.svg");
+    background-size: 10px;
+    width: 23px;
   }
 }
 
@@ -47,5 +51,26 @@
   .social__list {
     border-bottom: none;
     margin-bottom: 0;
+    margin-left: 30px;
+  }
+
+  .social__item {
+    margin-bottom: 0;
+  }
+
+  .social__link {
+
+    &--vk {
+      background-size: 30px;
+    }
+
+    &--inst {
+      background-size: 23px;
+    }
+
+    &--fb {
+      background-size: 14px;
+      width: 21px;
+    }
   }
 }
